Simpler times added

--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
       <div class="wrapper">
         <div class="top-bar">
           <span
-            ><p>New songs!</p>
-            <p>
-              <em li-index="14" onclick="clicked(this)">Blues Man</em>,
-              <em li-index="15" onclick="clicked(this)">Memories</em>, and
-              <em li-index="16" onclick="clicked(this)">How Good</em>.
-            </p>
+            ><p>New song!</p>
+            <p><em li-index="17" onclick="clicked(this)">Simpler Times</em>.</p>
           </span>
         </div>
 
