main New song Maybe Youll see the light. Height placeholder for song details

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
       <div class="wrapper">
         <div class="top-bar">
           <span
-            ><p>New song!</p>
-            <p><em li-index="17" onclick="clicked(this)">Simpler Times</em>.</p>
+            ><p>New songs!</p>
+            <p>
+              <em li-index="17" onclick="clicked(this)">Simpler Times</em> and
+              <em li-index="18" onclick="clicked(this)"
+                >Maybe You'll See the Light</em
+              >.
+            </p>
           </span>
         </div>
 
