--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="wrapper">
         <div class="top-bar">
           <span>
-            <p>Use the arrows to change the album.</p>
+            <p>New EP! Use the arrows to change the album.</p>
             <!-- <p>
               <em li-index="17" onclick="clicked(this)">Simpler Times</em> and
               <em li-index="18" onclick="clicked(this)"
