main Duration fix. Hide download. Change colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="wrapper">
         <div class="top-bar">
           <span>
-            <p>New EP! Use the arrows to change the album.</p>
+            <p>Use the arrows to change the album.</p>
             <!-- <p>
               <em li-index="17" onclick="clicked(this)">Simpler Times</em> and
               <em li-index="18" onclick="clicked(this)"
@@ -100,12 +100,12 @@
           </div>
         </div>
 
-        <div class="download-area">
+        <!-- <div class="download-area">
           <a href="songs/songs.zip" download>
             <span>Download all songs</span>
             <i id="download-music" class="material-icons">download</i>
           </a>
-        </div>
+        </div> -->
 
         <div class="music-list">
           <div class="header">
